--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:vscode-package-json-dependencies-graph.helloWorld"
+		"onCommand:vscode-package-json-dependencies-graph.parse"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "vscode-package-json-dependencies-graph.helloWorld",
-				"title": "Hello World"
+				"command": "vscode-package-json-dependencies-graph.parse",
+				"title": "Generate graph for package.json"
 			}
 		]
 	},
@@ -33,19 +33,25 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.53.0",
+		"@types/d3": "^6.3.0",
+		"@types/d3-force": "^2.1.0",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
 		"@types/node": "^12.11.7",
-		"eslint": "^7.19.0",
+		"@types/vscode": "^1.53.0",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
+		"eslint": "^7.19.0",
 		"glob": "^7.1.6",
 		"mocha": "^8.2.1",
+		"ts-loader": "^8.0.14",
 		"typescript": "^4.1.3",
 		"vscode-test": "^1.5.0",
-		"ts-loader": "^8.0.14",
 		"webpack": "^5.19.0",
 		"webpack-cli": "^4.4.0"
+	},
+	"dependencies": {
+		"d3": "^6.5.0",
+		"d3-force": "^2.1.1"
 	}
 }
